--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/anselbobrow/face-music#readme",
   "devDependencies": {
+    "autoprefixer": "^9.8.4",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
@@ -31,6 +32,7 @@
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
@@ -40,6 +42,6 @@
   "dependencies": {
     "face-api.js": "^0.22.2",
     "nexusui": "^2.1.4",
-    "tone": "^14.7.11"
+    "tone": "^14.7.12"
   }
 }
